--- a/about.html
+++ b/about.html
@@ -33,23 +33,22 @@
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
+    
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link active">About</a>
-                        <a href="feature.html" class="nav-item nav-link">Feature</a>
-                        <a href="team.html" class="nav-item nav-link">Chef</a>
-                        <a href="menu.html" class="nav-item nav-link">Menu</a>
-                        <a href="booking.html" class="nav-item nav-link">Booking</a>
+                        <a href="about.html" class="nav-item nav-link active">Sobre Nosotros</a>
+                        <a href="shop.html" class="nav-item nav-link">Tienda</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Alojamientos</a>
                             <div class="dropdown-menu">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <a href="hoteles-en-cartagena-de-indias.html" class="dropdown-item">Alojamientos en
+                                    Cartagena</a>
+                                <a href="hoteles-en-bogota.html" class="dropdown-item">Alojamientos en Bogotá</a>
+                                <a href="hoteles-en-medellin.html" class="dropdown-item">Alojamientos en Medellín</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contáctanos</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +61,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2>About Us</h2>
+                        <h2 class="h1">About Us</h2>
                     </div>
                     <div class="col-12">
                         <a href="">Home</a>
