--- a/checkout.html
+++ b/checkout.html
@@ -109,7 +109,7 @@
                         <div id="content_product_null" class="page-content">
                             <div class="container-btn-shop text-center">
                                 <!--<h2 class="title_check">Aun no has elejido nada para comprar</h2>-->
-                                <img src="img/cart.jpg" alt="">
+                                <img class="img_cart" src="img/cart.jpg" alt="">
                                 <a href="shop.html" class="btn custom-btn">Comprar en la tienda</a>
                             </div>
                         </div>
