--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- CSS Libraries -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
@@ -147,7 +149,7 @@
                         <form id="reservar">
                             <div class="control-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Name" required="required" />
+                                    <input type="text" class="form-control" placeholder="Nombre" required="required" />
                                     <div class="input-group-append">
                                         <div class="input-group-text"><i class="far fa-user"></i></div>
                                     </div>
@@ -163,7 +165,7 @@
                             </div>
                             <div class="control-group">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Mobile" required="required" />
+                                    <input type="text" class="form-control" placeholder="Cel" required="required" />
                                     <div class="input-group-append">
                                         <div class="input-group-text"><i class="fa fa-mobile-alt"></i></div>
                                     </div>
@@ -171,7 +173,7 @@
                             </div>
                             <div class="control-group">
                                 <div class="input-group date" id="date" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" placeholder="Date"
+                                    <input type="text" class="form-control datetimepicker-input" placeholder="Fecha"
                                         data-target="#date" data-toggle="datetimepicker" />
                                     <div class="input-group-append" data-target="#date" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="far fa-calendar-alt"></i></div>
@@ -180,7 +182,7 @@
                             </div>
                             <div class="control-group">
                                 <div class="input-group time" id="time" data-target-input="nearest">
-                                    <input type="text" class="form-control datetimepicker-input" placeholder="Time"
+                                    <input type="text" class="form-control datetimepicker-input" placeholder="Tiempo"
                                         data-target="#time" data-toggle="datetimepicker" />
                                     <div class="input-group-append" data-target="#time" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="far fa-clock"></i></div>
@@ -217,68 +219,6 @@
         </div>
     </div>
     <!-- Booking End -->
-
-
-    <!-- About Start -->
-    <!--<div class="about">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="about-img">
-                        <img src="img/about.jpg" alt="Image">
-                        <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
-                            <span></span>
-                        </button>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-content">
-                        <div class="section-header">
-                            <p>About Us</p>
-                            <h2>Cooking Since 1990</h2>
-                        </div>
-                        <div class="about-text">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem.
-                            </p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi.
-                                Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
-                                condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean
-                                consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
-                            </p>
-                            <a class="btn custom-btn" href="">Book A Table</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
-    <!-- About End -->
-
-
-    <!-- Video Modal Start-->
-    <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <!-- 16:9 aspect ratio -->
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
-                            allow="autoplay"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Video Modal End -->
 
 
     <!-- Feature Start -->
@@ -318,29 +258,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="feature-item">
-                                <i class="flaticon-cooking"></i>
-                                <h3>World’s best Chef</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit
-                                    non vulput metus tortor
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="feature-item">
-                                <i class="flaticon-vegetable"></i>
-                                <h3>Natural ingredients</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit
-                                    non vulput metus tortor
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="feature-item">
-                                <i class="flaticon-medal"></i>
+                                <i class="fi fi-rr-badge"></i>
                                 <h3>Servicio de calidad</h3>
                                 <p>
                                     Nuestra Genesis es nuestro cliente, nos tomamos en serio tus peticiones.
@@ -349,11 +267,10 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="feature-item">
-                                <i class="flaticon-meat"></i>
-                                <h3>Fresh vegetables & Meet</h3>
+                                <i class="fi fi-rr-time-delete"></i>
+                                <h3>Cancela gratis</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit
-                                    non vulput metus tortor
+                                    Cancela gratis cuando lo desees, ten en cuenta las <a href="/">políticas de cancelación</a> antes escoger un tour.
                                 </p>
                             </div>
                         </div>
@@ -361,7 +278,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="feature-item">
-                                <i class="flaticon-courier"></i>
+                                <i class="fi fi-rr-time-twenty-four"></i>
                                 <h3>Atención las 24 horas del día</h3>
                                 <p>
                                     Nuestro servicio de atención son las 24 horas del día, siempre disponibles para ti.
@@ -370,11 +287,10 @@
                         </div>
                         <div class="col-sm-6">
                             <div class="feature-item">
-                                <i class="flaticon-fruits-and-vegetables"></i>
-                                <h3>Ground beef & Low fat</h3>
+                                <i class="fi fi-rr-list-check"></i>
+                                <h3>Planea tu recorrido</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit
-                                    non vulput metus tortor
+                                    Te diseñaremos un plan para las excursiones que puedes hacer en Cartagena.
                                 </p>
                             </div>
                         </div>
@@ -384,49 +300,6 @@
         </div>
     </div>
     <!-- Feature End -->
-
-
-    <!-- Food Start -->
-    <!--<div class="food">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-burger"></i>
-                        <h2>Burgers</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non
-                            vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-snack"></i>
-                        <h2>Snacks</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non
-                            vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-cocktail"></i>
-                        <h2>Beverages</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non
-                            vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
-    <!-- Food End -->
 
 
         <!-- Team Start -->
@@ -762,7 +635,7 @@
     <div class="contact">
         <div class="container">
             <div class="section-header text-center">
-                <p>Contactanos</p>
+                <p>Contáctanos</p>
                 <h2>Deseamos escucharte</h2>
             </div>
             <div class="row align-items-center contact-information">
@@ -777,17 +650,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="col-md-6 col-lg-3">
-                    <div class="contact-info">
-                        <div class="contact-icon">
-                            <i class="fa fa-phone-alt"></i>
-                        </div>
-                        <div class="contact-text">
-                            <h3>Call Us</h3>
-                            <p>+012 345 6789</p>
-                        </div>
-                    </div>
-                </div>-->
                 <div class="col-md-6 col-lg-3">
                     <div class="contact-info">
                         <div class="contact-icon">
@@ -805,13 +667,10 @@
                             <i class="fa fa-share"></i>
                         </div>
                         <div class="contact-text">
-                            <h3>Follow Us</h3>
+                            <h3>Síguenos</h3>
                             <div class="contact-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-youtube"></i></a>
                                 <a href=""><i class="fab fa-instagram"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -819,35 +678,30 @@
             </div>
             <div class="row contact-form">
                 <div class="col-md-6">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1600663868074!5m2!1sen!2sbd"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
-                <div class="col-md-6">
                     <div id="success"></div>
                     <form name="sentMessage" id="contactForm" novalidate="novalidate">
                         <div class="control-group">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name"
+                            <input type="text" class="form-control" id="name" placeholder="Nombre"
                                 required="required" data-validation-required-message="Please enter your name" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email"
+                            <input type="email" class="form-control" id="email" placeholder="Email"
                                 required="required" data-validation-required-message="Please enter your email" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <input type="text" class="form-control" id="subject" placeholder="Subject"
+                            <input type="text" class="form-control" id="subject" placeholder="Asunto"
                                 required="required" data-validation-required-message="Please enter a subject" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="control-group">
-                            <textarea class="form-control" id="message" placeholder="Message" required="required"
+                            <textarea class="form-control" id="message" placeholder="Escribe aquí tu mensaje" required="required"
                                 data-validation-required-message="Please enter your message"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                         <div>
-                            <button class="btn custom-btn" type="submit" id="sendMessageButton">Send Message</button>
+                            <button class="btn custom-btn" type="submit" id="sendMessageButton">Enviar Mensaje</button>
                         </div>
                     </form>
                 </div>
@@ -869,11 +723,8 @@
                                 <!--<p><i class="fa fa-phone-alt"></i>+012 345 67890</p>-->
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
