--- a/shop.html
+++ b/shop.html
@@ -200,7 +200,7 @@
         </div>
     </div>
     <!-- Footer End -->
-    <a id="checkoutB" onclick="add(value)" href="checkout.html">Pagar</a>
+    <a id="checkoutB" href="checkout.html">Pagar</a>
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
