img chanche footer

--- a/hoteles-en-cartagena-de-indias.html
+++ b/hoteles-en-cartagena-de-indias.html
@@ -55,7 +55,6 @@
                     <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
                     <a href="shop.html" class="nav-item nav-link">Tienda</a>
-                    <a href="booking.html" class="nav-item nav-link">Reservar</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Alojamientos</a>
                         <div class="dropdown-menu">
@@ -707,29 +706,27 @@
     </div>
 
 
-    <!-- Footer Start -->
-    <div class="footer">
+     <!-- Footer Start -->
+     <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="footer-contact">
-                                <h2>Datos de contacto</h2>
+                                <h2>Datos De Contacto</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>Cartagena, Colombia</p>
+                                <!--<p><i class="fa fa-phone-alt"></i>+012 345 67890</p>-->
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="footer-link">
-                                <h2>Esta pagina</h2>
+                                <h2>Esta Pagina</h2>
                                 <a href="">Terminos de uso</a>
                                 <a href="">Politica de privacidad</a>
                                 <a href="">Cookies</a>
@@ -746,8 +743,8 @@
                             TourOpen.
                         </p>
                         <div class="form">
-                            <input class="form-control" placeholder="Email goes here">
-                            <button class="btn custom-btn">Submit</button>
+                            <input class="form-control" placeholder="Email">
+                            <button class="btn custom-btn">Suscribirme</button>
                         </div>
                     </div>
                 </div>
@@ -755,8 +752,8 @@
         </div>
         <div class="copyright">
             <div class="container">
-                <p>Copyright &copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p>Copyright &copy; <a href="#">TourOpen</a>, Todos los derechos reservados.</p>
+                <p>Diseñado por <a href="https://santydev.netlify.app/">SantyDev.com</a></p>
             </div>
         </div>
     </div>
