--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                                 <h2 class="blog-title">Los 10 mejores Tours en Cartagena 2022</h2>
                                 <div class="blog-meta">
                                     <p><i class="far fa-list-alt"></i>Alojamiento</p>
-                                    <p><i class="far fa-calendar-alt"></i>01-Jan-2045</p>
+                                    <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
                                 </div>
                                 <div class="blog-text">
                                     <p>
@@ -564,13 +564,13 @@
                                 <h2 class="blog-title">Los 10 mejores hoteles en Medellín 2022</h2>
                                 <div class="blog-meta">
                                     <p><i class="far fa-list-alt"></i>Alojamiento</p>
-                                    <p><i class="far fa-calendar-alt"></i>01-Jan-2045</p>
+                                    <p><i class="far fa-calendar-alt"></i>15-03-2022</p>
                                 </div>
                                 <div class="blog-text">
                                     <p>
-                                        Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non
-                                        vulpte liqum metus tortor. Lorem ipsum dolor sit amet elit. Neca pretim miura bitur
-                                        facili ornare velit non vulpte
+                                        Encontrarás en Medellin los mejores Hoteles y hostales de esta ciudad.
+                                        Encuentra en Medellin Hostales económicos, Hoteles de lujo, Hoteles y Hostales con
+                                        piscina.
                                     </p>
                                     <a class="btn custom-btn" href="medellin.html">Lo mejor de Medellín</a>
                                 </div>
@@ -584,7 +584,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="testimonial">
+   <!-- <div class="testimonial">
         <div class="container">
             <div class="owl-carousel testimonials-carousel">
                 <div class="testimonial-item">
@@ -629,7 +629,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Testimonial End -->
 
 
