--- a/shop.html
+++ b/shop.html
@@ -154,21 +154,19 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="footer-contact">
-                                <h2>Datos de contacto</h2>
+                                <h2>Datos De Contacto</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>Cartagena, Colombia</p>
+                                <!--<p><i class="fa fa-phone-alt"></i>+012 345 67890</p>-->
                                 <p><i class="fa fa-envelope"></i>touropeninfo@gmail.com</p>
                                 <div class="footer-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="footer-link">
-                                <h2>Esta pagina</h2>
+                                <h2>Esta Pagina</h2>
                                 <a href="">Terminos de uso</a>
                                 <a href="">Politica de privacidad</a>
                                 <a href="">Cookies</a>
@@ -185,8 +183,8 @@
                             TourOpen.
                         </p>
                         <div class="form">
-                            <input class="form-control" placeholder="Email goes here">
-                            <button class="btn custom-btn">Submit</button>
+                            <input class="form-control" placeholder="Email">
+                            <button class="btn custom-btn">Suscribirme</button>
                         </div>
                     </div>
                 </div>
@@ -194,11 +192,12 @@
         </div>
         <div class="copyright">
             <div class="container">
-                <p>Copyright &copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
-                <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p>Copyright &copy; <a href="#">TourOpen</a>, Todos los derechos reservados.</p>
+                <p>Diseñado por <a href="https://santydev.netlify.app/">SantyDev.com</a></p>
             </div>
         </div>
     </div>
+    <!-- Footer End -->
     <!-- Footer End -->
     <a id="checkoutB" href="checkout.html">Pagar</a>
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
