--- a/checkout.html
+++ b/checkout.html
@@ -45,6 +45,7 @@
 </head>
 
 <body id="body">
+    <div class="loader"></div>
     <!-- Nav Bar Start -->
     <div id="coll" class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
@@ -88,7 +89,7 @@
                 <div class="page-pro">
                     <div class="container">
                         <!-- Checkout Container Start -->
-                        <div id="content_product_checkout" class="page-content">
+                        <div data-aos="fade-up" id="content_product_checkout" class="page-content">
                             <!-- Carts Products Here (acountCard.js) -->
                         </div>
 
@@ -185,6 +186,7 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/tempusdominus/js/moment.min.js"></script>
